Fix text stroke on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -34,6 +34,7 @@ a{
   --neom-btn2: rgba(255, 255, 255, .5);
   --neom-btn3: rgba(255, 255, 255, .075);
   --neom-btn4: rgba(0, 0, 0, .15);
+  --liquid-contrast-menu: #a4a9b0;
 }
  [data-theme="dark"] {
   --primary-color:#161c23;
@@ -50,6 +51,8 @@ a{
   --neom-btn2: rgba(0, 0, 0, .5);
   --neom-btn3: rgba(0, 0, 0, .075);
   --neom-btn4: rgba(255, 255, 255, .15);
+  --liquid-contrast-menu: #ccd7e8;
+  
 }
 [data-theme="cyan"] {
   --primary-color: #E0FFFF;
@@ -66,6 +69,7 @@ a{
   --neom-btn2: rgba(255, 255, 255, .5);
   --neom-btn3: rgba(255, 255, 255, .075);
   --neom-btn4: rgba(0, 0, 0, .15);
+  --liquid-contrast-menu: #a4a9b0;
 }
 [data-theme="beige"]{
   --primary-color: #fff0db;
@@ -82,6 +86,7 @@ a{
   --neom-btn2: rgba(255, 255, 255, .5);
   --neom-btn3: rgba(255, 255, 255, .075);
   --neom-btn4: rgba(0, 0, 0, .15);
+  --liquid-contrast-menu: #a4a9b0;
   
 }
 [data-theme="night-blue"]{
@@ -99,6 +104,8 @@ a{
   --neom-btn2: rgba(0, 0, 0, .5);
   --neom-btn3: rgba(0, 0, 0, .075);
   --neom-btn4: rgba(255, 255, 255, .15);
+  --liquid-contrast-menu: #ccd7e8;
+  
 }
 ::-webkit-scrollbar {
   width: 10px;
